force-app-modified/main/default/objects/charters__c/charters__c.object-meta.xml
<CustomObject>
    <label>צ&apos;רטר</label>
    <nameField>
        <displayFormat>CH-{0000}</displayFormat>
        <label>מספר הפלגה</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>צ&apos;רטרים</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>