force-app-modified/main/default/objects/charters__c/fields/ActiveSail__c.field-meta.xml
<CustomField>
    <fullName>ActiveSail__c</fullName>
    <defaultValue>true</defaultValue>
    <label>הפלגה פעילה</label>
    <type>Checkbox</type>
</CustomField>