force-app-modified/main/default/objects/charters__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <label>גורם מטפל</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>תום</fullName>
            </value>
            <value>
                <fullName>רפי</fullName>
            </value>
            <value>
                <fullName>יונתן</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>