force-app-modified/main/default/objects/charters__c/fields/Area_of_Sail__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Sail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area of Sail</label>
    <referenceTo>Area_of_Sail__c</referenceTo>
    <relationshipLabel>צ&apos;רטרים</relationshipLabel>
    <relationshipName>Charter</relationshipName>
    <type>Lookup</type>
</CustomField>