force-app-modified/main/default/objects/charters__c/fields/BaseDetailsSent__c.field-meta.xml
<CustomField>
    <fullName>BaseDetailsSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>נשלחו פרטי בסיס</label>
    <type>Checkbox</type>
</CustomField>