force-app-modified/main/default/objects/charters__c/fields/BrieffingDate__c.field-meta.xml
<CustomField>
    <fullName>BrieffingDate__c</fullName>
    <label>תאריך תדרוך</label>
    <type>Date</type>
</CustomField>