force-app-modified/main/default/objects/charters__c/fields/cabins__c.field-meta.xml
<CustomField>
    <fullName>cabins__c</fullName>
    <label>קבינות</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>