force-app-modified/main/default/objects/charters__c/fields/charter_agreement_alert__c.field-meta.xml
<CustomField>
    <fullName>charter_agreement_alert__c</fullName>
    <formula>IF(charter_agreement_sent__c=false,IMAGE(&quot;https://sea-time--c.eu25.content.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0682o00000G9byh&amp;operationContext=CHATTER&amp;contentId=05T2o00000ouqj9&quot;,&quot;papers&quot;,50,50),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>חוזה השכרה נשלח</label>
    <type>Text</type>
</CustomField>