force-app-modified/main/default/objects/charters__c/fields/charter_agreement_sent__c.field-meta.xml
<CustomField>
    <fullName>charter_agreement_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>נשלח חוזה חברת השכרה</label>
    <type>Checkbox</type>
</CustomField>