force-app-modified/main/default/objects/charters__c/fields/charter_date__c.field-meta.xml
<CustomField>
    <fullName>charter_date__c</fullName>
    <label>תאריך ההפלגה</label>
    <type>Date</type>
</CustomField>