force-app-modified/main/default/objects/charters__c/fields/client__c.field-meta.xml
<CustomField>
    <fullName>client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>לקוח</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>צ&apos;רטרים</relationshipLabel>
    <relationshipName>charterclient</relationshipName>
    <type>Lookup</type>
</CustomField>