force-app-modified/main/default/objects/charters__c/fields/client_price__c.field-meta.xml
<CustomField>
    <fullName>client_price__c</fullName>
    <label>מחיר ללקוח</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>