force-app-modified/main/default/objects/charters__c/fields/client_price_after_discount__c.field-meta.xml
<CustomField>
    <fullName>client_price_after_discount__c</fullName>
    <formula>client_price__c - discount__c + FlotillaFee__c - FlotillaFeeDiscount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מחיר סופי</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>