force-app-modified/main/default/objects/charters__c/fields/ClientRemarks__c.field-meta.xml
<CustomField>
    <fullName>ClientRemarks__c</fullName>
    <label>הערות ללקוח</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>