force-app-modified/main/default/objects/charters__c/fields/CommisionInvoice__c.field-meta.xml
<CustomField>
    <fullName>CommisionInvoice__c</fullName>
    <formula>IF(
ISBLANK(commissionInvoiceDate__c)=false,
  IMAGE(
    &quot;https://sea-time.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068Td00000JGRm8&amp;operationContext=CHATTER&amp;contentId=05TTd00000Mahhy&quot;,
    &quot;GREEN&quot;,
    50,
    50
  ),
  IF(
    AND(
      (charter_date__c - 7) &lt; TODAY(),
ISBLANK(commissionInvoiceDate__c)=true
    ),
    IMAGE(
      &quot;https://sea-time.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068Td00000JGUNO&amp;operationContext=CHATTER&amp;contentId=05TTd00000MaltQ&quot;,
      &quot;RED&quot;,
      50,
      50
    ),
    IMAGE(
      &quot;https://sea-time.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068Td00000JGUgl&amp;operationContext=CHATTER&amp;contentId=05TTd00000MaiQz&quot;,
      &quot;ORANGE&quot;,
      50,
      50
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>חשבונית עמלה</label>
    <type>Text</type>
</CustomField>