force-app-modified/main/default/objects/charters__c/fields/commission__c.field-meta.xml
<CustomField>
    <fullName>commission__c</fullName>
    <defaultValue>0</defaultValue>
    <label>עמלה</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>