force-app-modified/main/default/objects/charters__c/fields/commissionInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>commissionInvoiceDate__c</fullName>
    <label>תאריך הנפקת חשבונית עמלה</label>
    <type>Date</type>
</CustomField>