force-app-modified/main/default/objects/charters__c/fields/course_number__c.field-meta.xml
<CustomField>
    <fullName>course_number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>מספר קורס</label>
    <referenceTo>courses__c</referenceTo>
    <relationshipLabel>צ&apos;רטרים</relationshipLabel>
    <relationshipName>coursenumber</relationshipName>
    <type>Lookup</type>
</CustomField>