force-app-modified/main/default/objects/charters__c/fields/CrewListsent__c.field-meta.xml
<CustomField>
    <fullName>CrewListsent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>רשימת צוות נשלחה</label>
    <type>Checkbox</type>
</CustomField>