force-app-modified/main/default/objects/charters__c/fields/DealerNetPrice__c.field-meta.xml
<CustomField>
    <fullName>DealerNetPrice__c</fullName>
    <formula>client_price__c - commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מחיר נטו ספק</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>