force-app-modified/main/default/objects/charters__c/fields/DEPOSIT__c.field-meta.xml
<CustomField>
    <fullName>DEPOSIT__c</fullName>
    <label>DEPOSIT</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>