force-app-modified/main/default/objects/charters__c/fields/DepositAfterDeduction__c.field-meta.xml
<CustomField>
    <fullName>DepositAfterDeduction__c</fullName>
    <label>השתתפות עצמית לאחר הפחתה</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>