force-app-modified/main/default/objects/charters__c/fields/different_extra_2__c.field-meta.xml
<CustomField>
    <fullName>different_extra_2__c</fullName>
    <label>תוספת שונה 3</label>
    <type>TextArea</type>
</CustomField>