force-app-modified/main/default/objects/charters__c/fields/different_extra__c.field-meta.xml
<CustomField>
    <fullName>different_extra__c</fullName>
    <label>תוספת שונה 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>