force-app-modified/main/default/objects/charters__c/fields/different_extra_price_3__c.field-meta.xml
<CustomField>
    <fullName>different_extra_price_3__c</fullName>
    <label>מחיר תוספת שונה 3</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>