force-app-modified/main/default/objects/charters__c/fields/discount__c.field-meta.xml
<CustomField>
    <fullName>discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>הנחה מעמלה</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>