force-app-modified/main/default/objects/charters__c/fields/EndMarina__c.field-meta.xml
<CustomField>
    <fullName>EndMarina__c</fullName>
    <label>מרינת חזרה</label>
    <length>25</length>
    <type>Text</type>
</CustomField>