force-app-modified/main/default/objects/charters__c/fields/EuroRate1__c.field-meta.xml
<CustomField>
    <fullName>EuroRate1__c</fullName>
    <label>שער יורו תשלום 1</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>