force-app-modified/main/default/objects/charters__c/fields/EuroRate2__c.field-meta.xml
<CustomField>
    <fullName>EuroRate2__c</fullName>
    <label>שער יורו תשלום 2</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>