force-app-modified/main/default/objects/charters__c/fields/EuroRate3__c.field-meta.xml
<CustomField>
    <fullName>EuroRate3__c</fullName>
    <label>שער יורו תשלום 3</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>