force-app-modified/main/default/objects/charters__c/fields/extra1price__c.field-meta.xml
<CustomField>
    <fullName>extra1price__c</fullName>
    <label>מחיר תוספת 1</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>