force-app-modified/main/default/objects/charters__c/fields/extra4__c.field-meta.xml
<CustomField>
    <fullName>extra4__c</fullName>
    <label>תוספת 4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ניקיון סופי</fullName>
            </value>
            <value>
                <fullName>טרנזיט לוג</fullName>
            </value>
            <value>
                <fullName>מנוע דינגי</fullName>
            </value>
            <value>
                <fullName>הקטנת השתתפות עצמית</fullName>
            </value>
            <value>
                <fullName>קיאק</fullName>
            </value>
            <value>
                <fullName>סאפ</fullName>
            </value>
            <value>
                <fullName>סקיפר</fullName>
            </value>
            <value>
                <fullName>מארחת</fullName>
            </value>
            <value>
                <fullName>WIFI</fullName>
            </value>
            <value>
                <fullName>צ&apos;ק אין מוקדם</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>