force-app-modified/main/default/objects/charters__c/fields/ExtrasPaidInAdvance__c.field-meta.xml
<CustomField>
    <fullName>ExtrasPaidInAdvance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>תשלום תוספות מראש</label>
    <type>Checkbox</type>
</CustomField>