force-app-modified/main/default/objects/charters__c/fields/FilesAlert__c.field-meta.xml
<CustomField>
    <fullName>FilesAlert__c</fullName>
    <formula>IF(
  AND(
    SkipperLicenceSent__c = TRUE,
    CrewListsent__c = TRUE
  ),
  IMAGE(
    &quot;https://sea-time.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068Td00000JGRm8&amp;operationContext=CHATTER&amp;contentId=05TTd00000Mahhy&quot;,
    &quot;GREEN&quot;,
    50,
    50
  ),
  IF(
    AND(
      charter_date__c - 45 &lt; TODAY(),
      OR(
        SkipperLicenceSent__c = FALSE,
        CrewListsent__c = FALSE
      )
    ),
    IMAGE(
      &quot;https://sea-time.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068Td00000JGUNO&amp;operationContext=CHATTER&amp;contentId=05TTd00000MaltQ&quot;,
      &quot;RED&quot;,
      50,
      50
    ),
    IMAGE(
      &quot;https://sea-time.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068Td00000JGUgl&amp;operationContext=CHATTER&amp;contentId=05TTd00000MaiQz&quot;,
      &quot;ORANGE&quot;,
      50,
      50
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>רישיון+רשימת צוות</label>
    <type>Text</type>
</CustomField>