force-app-modified/main/default/objects/charters__c/fields/final_commission__c.field-meta.xml
<CustomField>
    <fullName>final_commission__c</fullName>
    <formula>commission__c - discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>עמלה סופית לאחר הנחה</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>