force-app-modified/main/default/objects/charters__c/fields/FirstPaymentBalanceSeatime__c.field-meta.xml
<CustomField>
    <fullName>FirstPaymentBalanceSeatime__c</fullName>
    <formula>FirstPaymentSeatime__c-FirstPaymentDoneSeatime__c</formula>
    <label>הפרש תשלום 1 סי טיים</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>