force-app-modified/main/default/objects/charters__c/fields/FirstPaymentClient__c.field-meta.xml
<CustomField>
    <fullName>FirstPaymentClient__c</fullName>
    <formula>FirstPaymentRate__c*FinalPriceIncludingExtras__c+30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>תשלום 1 לקוח</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>