force-app-modified/main/default/objects/charters__c/fields/FirstPaymentDealer__c.field-meta.xml
<CustomField>
    <fullName>FirstPaymentDealer__c</fullName>
    <label>מועד תשלום 1 לספק</label>
    <type>Date</type>
</CustomField>