force-app-modified/main/default/objects/charters__c/fields/FirstPaymentDealerRate__c.field-meta.xml
<CustomField>
    <fullName>FirstPaymentDealerRate__c</fullName>
    <label>אחוז תשלום 1 לספק</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>