force-app-modified/main/default/objects/charters__c/fields/FirstPaymentDoneSeatime__c.field-meta.xml
<CustomField>
    <fullName>FirstPaymentDoneSeatime__c</fullName>
    <defaultValue>0</defaultValue>
    <label>שולם ע&quot;י סי טיים 1</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>