force-app-modified/main/default/objects/charters__c/fields/FirstPaymentPackRate__c.field-meta.xml
<CustomField>
    <fullName>FirstPaymentPackRate__c</fullName>
    <label>אחוז תשלום 1 חבילה</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>