force-app-modified/main/default/objects/charters__c/fields/FirstPaymentRate__c.field-meta.xml
<CustomField>
    <fullName>FirstPaymentRate__c</fullName>
    <label>אחוז תשלום 1</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>