force-app-modified/main/default/objects/charters__c/fields/FlotillaFeeDiscount__c.field-meta.xml
<CustomField>
    <fullName>FlotillaFeeDiscount__c</fullName>
    <label>הנחה מתוספת פלוטילה</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>