force-app-modified/main/default/objects/charters__c/fields/FlotillaParticipantPrice__c.field-meta.xml
<CustomField>
    <fullName>FlotillaParticipantPrice__c</fullName>
    <description>מחיר לקבינה (ביאכטה משותפת פלוטילה)</description>
    <label>מחיר לקבינה (ביאכטה משותפת פלוטילה)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>