force-app-modified/main/default/objects/charters__c/fields/general_charter_information__c.field-meta.xml
<CustomField>
    <fullName>general_charter_information__c</fullName>
    <label>מידע כללי</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>