force-app-modified/main/default/objects/charters__c/fields/marina__c.field-meta.xml
<CustomField>
    <fullName>marina__c</fullName>
    <label>מרינת יציאה</label>
    <length>25</length>
    <type>Text</type>
</CustomField>