force-app-modified/main/default/objects/charters__c/fields/NetPricePackYacht__c.field-meta.xml
<CustomField>
    <fullName>NetPricePackYacht__c</fullName>
    <label>מחיר נטו יאכטה לספק</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>