force-app-modified/main/default/objects/charters__c/fields/PackageBookingDate__c.field-meta.xml
<CustomField>
    <fullName>PackageBookingDate__c</fullName>
    <label>תאריך סגירת חבילה</label>
    <type>Date</type>
</CustomField>