force-app-modified/main/default/objects/charters__c/fields/PackageOptionalExtrasTotalPrice__c.field-meta.xml
<CustomField>
    <fullName>PackageOptionalExtrasTotalPrice__c</fullName>
    <formula>extra1price__c+extra2price__c+extra3price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>סה&quot;כ עלות תוספות רשות חבילה</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>