force-app-modified/main/default/objects/charters__c/fields/PackDiscount__c.field-meta.xml
<CustomField>
    <fullName>PackDiscount__c</fullName>
    <label>הנחה חבילה</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>