force-app-modified/main/default/objects/charters__c/fields/Photography_Button2__c.field-meta.xml
<CustomField>
    <fullName>Photography_Button2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photography Button2</label>
    <type>Checkbox</type>
</CustomField>