force-app-modified/main/default/objects/charters__c/fields/SeatimeRate__c.field-meta.xml
<CustomField>
    <fullName>SeatimeRate__c</fullName>
    <label>ציון סי טיים</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>