force-app-modified/main/default/objects/charters__c/fields/SeaTimeSecondPaymentAlert__c.field-meta.xml
<CustomField>
    <fullName>SeaTimeSecondPaymentAlert__c</fullName>
    <formula>IF(
  AND(
    SecondPaymentBalanceSeaTime__c &gt; 0,
    SecondPaymentDate__c &lt; TODAY(),
    ThirdPaymentDoneSeatime__c = 0
  ),
  IMAGE(
    &quot;https://sea-time.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068Td00000JGUNO&amp;operationContext=CHATTER&amp;contentId=05TTd00000MaltQ&quot;,
    &quot;RED&quot;,
    50,
    50
  ),
  IF(
    SecondPaymentBalanceSeaTime__c &lt;= 0,
    IMAGE(
      &quot;https://sea-time.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068Td00000JGRm8&amp;operationContext=CHATTER&amp;contentId=05TTd00000Mahhy&quot;,
      &quot;GREEN&quot;,
      50,
      50
    ),
    IMAGE(
      &quot;https://sea-time.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068Td00000JGUgl&amp;operationContext=CHATTER&amp;contentId=05TTd00000MaiQz&quot;,
      &quot;ORANGE&quot;,
      50,
      50
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>התראת תשלום 2 סי טיים</label>
    <type>Text</type>
</CustomField>