force-app-modified/main/default/objects/charters__c/fields/SecondPaymentBalanceDeal__c.field-meta.xml
<CustomField>
    <fullName>SecondPaymentBalanceDeal__c</fullName>
    <formula>TotalSecondPaymentPack__c - SecondPaymentDoneClient__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>הפרש תשלום 2 חבילה</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>