force-app-modified/main/default/objects/charters__c/fields/SecondPaymentBalanceSeaTime__c.field-meta.xml
<CustomField>
    <fullName>SecondPaymentBalanceSeaTime__c</fullName>
    <formula>SecondPaymentSeatime__c-SecondPaymentDoneSeatimee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>הפרש תשלום 2 סי טיים</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>