force-app-modified/main/default/objects/charters__c/fields/SecondPaymentClient__c.field-meta.xml
<CustomField>
    <fullName>SecondPaymentClient__c</fullName>
    <formula>SecondPaymentRate__c*FinalPriceIncludingExtras__c+FirstPaymentBalance__c+30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>תשלום 2 לקוח</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>