force-app-modified/main/default/objects/charters__c/fields/SecondPaymentDealer__c.field-meta.xml
<CustomField>
    <fullName>SecondPaymentDealer__c</fullName>
    <label>מועד תשלום 2 לספק</label>
    <type>Date</type>
</CustomField>