force-app-modified/main/default/objects/charters__c/fields/SecondPaymentPackRate__c.field-meta.xml
<CustomField>
    <fullName>SecondPaymentPackRate__c</fullName>
    <label>אחוז תשלום 2 חבילה</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>