force-app-modified/main/default/objects/charters__c/fields/SecondPaymentRate__c.field-meta.xml
<CustomField>
    <fullName>SecondPaymentRate__c</fullName>
    <label>אחוז תשלום 2</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>