force-app-modified/main/default/objects/charters__c/fields/SecondPaymentSeatime__c.field-meta.xml
<CustomField>
    <fullName>SecondPaymentSeatime__c</fullName>
    <formula>IF(ExtrasPaidInAdvance__c=true, DealerNetPrice__c+total_extras_price__c, DealerNetPrice__c)*SecondPaymentRate__c+FirstPaymentBalanceSeatime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>תשלום 2 סי טיים</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>