force-app-modified/main/default/objects/charters__c/fields/SecondtPaymentText__c.field-meta.xml
<CustomField>
    <fullName>SecondtPaymentText__c</fullName>
    <label>הערות תשלום 2</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>