force-app-modified/main/default/objects/charters__c/fields/skipper__c.field-meta.xml
<CustomField>
    <fullName>skipper__c</fullName>
    <label>סקיפר</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAREBOAT</fullName>
            </value>
            <value>
                <fullName>מדריך סי טיים</fullName>
            </value>
            <value>
                <fullName>מקומי</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>