force-app-modified/main/default/objects/charters__c/fields/Skipper_Licence_Button1__c.field-meta.xml
<CustomField>
    <fullName>Skipper_Licence_Button1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skipper Licence Button1</label>
    <type>Checkbox</type>
</CustomField>