force-app-modified/main/default/objects/charters__c/fields/SkipperLicenceSent__c.field-meta.xml
<CustomField>
    <fullName>SkipperLicenceSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>רישיון סקיפר נשלח</label>
    <type>Checkbox</type>
</CustomField>