force-app-modified/main/default/objects/charters__c/fields/SkipperPrice__c.field-meta.xml
<CustomField>
    <fullName>SkipperPrice__c</fullName>
    <label>מחיר סקיפר</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>