force-app-modified/main/default/objects/charters__c/fields/ThirdPaymentClient__c.field-meta.xml
<CustomField>
    <fullName>ThirdPaymentClient__c</fullName>
    <formula>FinalPriceIncludingExtras__c*ThirdPaymentRate__c+SecondPaymentBalance__c+30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>תשלום 3 לקוח</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>