force-app-modified/main/default/objects/charters__c/fields/ThirdPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>ThirdPaymentDate__c</fullName>
    <label>תאריך תשלום 3</label>
    <type>Date</type>
</CustomField>