force-app-modified/main/default/objects/charters__c/fields/ThirdPaymentDealerRate__c.field-meta.xml
<CustomField>
    <fullName>ThirdPaymentDealerRate__c</fullName>
    <label>אחוז תשלום 3 לספק</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>