force-app-modified/main/default/objects/charters__c/fields/ThirdPaymentDoneClient__c.field-meta.xml
<CustomField>
    <fullName>ThirdPaymentDoneClient__c</fullName>
    <defaultValue>0</defaultValue>
    <label>שולם ע&quot;י לקוח 3</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>