force-app-modified/main/default/objects/charters__c/fields/ThirdPaymentRate__c.field-meta.xml
<CustomField>
    <fullName>ThirdPaymentRate__c</fullName>
    <label>אחוז תשלום 3</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>