force-app-modified/main/default/objects/charters__c/fields/ThirdPaymentSeatime__c.field-meta.xml
<CustomField>
    <fullName>ThirdPaymentSeatime__c</fullName>
    <formula>IF(ExtrasPaidInAdvance__c=true, DealerNetPrice__c+total_extras_price__c, DealerNetPrice__c)*ThirdPaymentRate__c+SecondPaymentBalanceSeaTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>תשלום 3 סי טיים</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>