force-app-modified/main/default/objects/charters__c/fields/ThirdPaymentText__c.field-meta.xml
<CustomField>
    <fullName>ThirdPaymentText__c</fullName>
    <label>הערות תשלום 3</label>
    <type>TextArea</type>
</CustomField>