force-app-modified/main/default/objects/charters__c/fields/total_extras_price__c.field-meta.xml
<CustomField>
    <fullName>total_extras_price__c</fullName>
    <formula>extra1price__c+extra2price__c+extra3price__c+extra4price__c+different_extra_price__c+different_extra_price_2__c+different_extra_price_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>עלות תוספות שנבחרו מראש</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>