force-app-modified/main/default/objects/charters__c/fields/TotalFirstPaymentPack__c.field-meta.xml
<CustomField>
    <fullName>TotalFirstPaymentPack__c</fullName>
    <formula>FirstPaymentPackRate__c*PackPriceAfterDiscount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>סכום לתשלום 1 חבילה</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>