force-app-modified/main/default/objects/charters__c/fields/TotalSecondPaymentPack__c.field-meta.xml
<CustomField>
    <fullName>TotalSecondPaymentPack__c</fullName>
    <formula>SecondPaymentPackRate__c*PackPriceAfterDiscount__c+ FirstPaymentBalanceDeal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>סכום לתשלום 2 חבילה</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>