force-app-modified/main/default/objects/charters__c/fields/TrasportationPrice__c.field-meta.xml
<CustomField>
    <fullName>TrasportationPrice__c</fullName>
    <label>מחיר הסעה</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>