force-app-modified/main/default/objects/charters__c/fields/VirtualSim__c.field-meta.xml
<CustomField>
    <fullName>VirtualSim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>סים וירטואלי</label>
    <type>Checkbox</type>
</CustomField>