force-app-modified/main/default/objects/charters__c/fields/yacht_length__c.field-meta.xml
<CustomField>
    <fullName>yacht_length__c</fullName>
    <label>אורך יאכטה (רגל)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>