force-app-modified/main/default/objects/charters__c/fields/yacht_model__c.field-meta.xml
<CustomField>
    <fullName>yacht_model__c</fullName>
    <label>דגם יאכטה</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beneteau</fullName>
            </value>
            <value>
                <fullName>Jeanneau</fullName>
            </value>
            <value>
                <fullName>Bavaria</fullName>
            </value>
            <value>
                <fullName>Dufour</fullName>
            </value>
            <value>
                <fullName>Hanse</fullName>
            </value>
            <value>
                <fullName>Lagoon</fullName>
            </value>
            <value>
                <fullName>Bali</fullName>
            </value>
            <value>
                <fullName>Fountaine-Pajot</fullName>
            </value>
            <value>
                <fullName>Moorings (Leopard)</fullName>
            </value>
            <value>
                <fullName>-Moorings (Lagoon)</fullName>
            </value>
            <value>
                <fullName>-Sunsail (Leopard)</fullName>
            </value>
            <value>
                <fullName>-Sunsail (Lagoon)</fullName>
            </value>
            <value>
                <fullName>Nautitech</fullName>
            </value>
            <value>
                <fullName>Elan</fullName>
            </value>
            <value>
                <fullName>Excess</fullName>
            </value>
            <value>
                <fullName>Sunsail</fullName>
            </value>
            <value>
                <fullName>Moorings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>