force-app-modified/main/default/objects/charters__c/fields/YachtRate__c.field-meta.xml
<CustomField>
    <fullName>YachtRate__c</fullName>
    <label>ציון היאכטה</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>