force-app-modified/main/default/objects/charters__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>charter_date__c</columns>
    <columns>client__c</columns>
    <columns>instructor__c</columns>
    <columns>destination__c</columns>
    <filterScope>Everything</filterScope>
    <label>הכול</label>
</ListView>